--- a/FinalProject2/Base.lproj/Main.storyboard
+++ b/FinalProject2/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="j7Y-4d-ha8">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dGQ-e3-m7K">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -48,15 +48,14 @@
                                             <action selector="logoutButtonTapped:" destination="dGQ-e3-m7K" eventType="touchUpInside" id="3MX-Qr-QPX"/>
                                         </connections>
                                     </button>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xIC-FG-ogb" customClass="CategoryViewInSliderMenu" customModule="FinalProject2" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="202" width="265" height="348"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="348" id="mOI-aW-AkR"/>
-                                        </constraints>
-                                    </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H1A-Z6-b7p">
                                         <rect key="frame" x="0.0" y="0.0" width="265" height="202"/>
                                         <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J2x-1M-bb8">
+                                                <rect key="frame" x="30" y="86" width="46" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Edit"/>
+                                            </button>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Badminton" translatesAutoresizingMaskIntoConstraints="NO" id="5Ff-cN-igB">
                                                 <rect key="frame" x="82" y="15" width="117" height="100"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -93,13 +92,10 @@
                                     <constraint firstItem="kDO-Vo-Rft" firstAttribute="leading" secondItem="kcR-AK-hpA" secondAttribute="leading" id="DtK-hm-iDp"/>
                                     <constraint firstItem="kDO-Vo-Rft" firstAttribute="top" secondItem="Sfi-On-WGY" secondAttribute="bottom" id="EOe-1s-Jns"/>
                                     <constraint firstAttribute="bottom" secondItem="H1A-Z6-b7p" secondAttribute="bottom" constant="465" id="NrQ-X1-TsW"/>
-                                    <constraint firstAttribute="trailing" secondItem="xIC-FG-ogb" secondAttribute="trailing" id="Org-mj-Gtq"/>
                                     <constraint firstAttribute="bottom" secondItem="kDO-Vo-Rft" secondAttribute="bottom" constant="10" id="c5i-zO-USz"/>
-                                    <constraint firstItem="xIC-FG-ogb" firstAttribute="leading" secondItem="kcR-AK-hpA" secondAttribute="leading" id="dIy-Gi-tRn"/>
                                     <constraint firstAttribute="trailing" secondItem="kDO-Vo-Rft" secondAttribute="trailing" id="ddW-gw-GuA"/>
                                     <constraint firstAttribute="width" constant="265" id="t7J-H6-tlR"/>
                                     <constraint firstItem="Sfi-On-WGY" firstAttribute="leading" secondItem="kcR-AK-hpA" secondAttribute="leading" id="w20-yv-4vP"/>
-                                    <constraint firstItem="xIC-FG-ogb" firstAttribute="top" secondItem="H1A-Z6-b7p" secondAttribute="bottom" id="ygN-oP-tUv"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="76" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6R9-I0-Dc0">
@@ -110,7 +106,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="76"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="umh-to-iG8" id="eSX-5v-OhL">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="75.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -206,6 +202,7 @@
                     <connections>
                         <outlet property="addButton" destination="msi-4u-sGe" id="g0k-b2-AQG"/>
                         <outlet property="avatarImageView" destination="5Ff-cN-igB" id="YsA-CH-oUZ"/>
+                        <outlet property="editProfileButton" destination="J2x-1M-bb8" id="Qcf-8b-nxX"/>
                         <outlet property="eventsBarButton" destination="ds1-Ee-JM6" id="woN-6o-NJc"/>
                         <outlet property="menuButton" destination="420-7O-4x1" id="wF1-nb-QEq"/>
                         <outlet property="menuView" destination="kcR-AK-hpA" id="u6l-lb-Zvt"/>
@@ -294,7 +291,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="87"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qiZ-NP-syx" id="OGB-qT-Si8">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="86"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="86.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -316,9 +313,9 @@
                                 <rect key="frame" x="0.0" y="20" width="600" height="50"/>
                                 <subviews>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="koW-Aw-HHH">
-                                        <rect key="frame" x="8" y="5" width="584" height="41"/>
+                                        <rect key="frame" x="-2" y="5" width="610" height="41"/>
                                         <segments>
-                                            <segment title="Food"/>
+                                            <segment title="     Food"/>
                                             <segment title="Sport"/>
                                             <segment title="Entertainment"/>
                                             <segment title="Work"/>
@@ -333,10 +330,10 @@
                                 </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="koW-Aw-HHH" secondAttribute="trailing" constant="8" id="EVI-UP-uci"/>
+                                    <constraint firstAttribute="trailing" secondItem="koW-Aw-HHH" secondAttribute="trailing" constant="-8" id="EVI-UP-uci"/>
                                     <constraint firstItem="koW-Aw-HHH" firstAttribute="top" secondItem="9k3-yu-6j5" secondAttribute="top" constant="5" id="LV0-me-qAk"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="600" id="Mqh-az-okm"/>
-                                    <constraint firstItem="koW-Aw-HHH" firstAttribute="leading" secondItem="9k3-yu-6j5" secondAttribute="leading" constant="8" id="Nvy-Eg-wLL"/>
+                                    <constraint firstItem="koW-Aw-HHH" firstAttribute="leading" secondItem="9k3-yu-6j5" secondAttribute="leading" constant="-2" id="Nvy-Eg-wLL"/>
                                     <constraint firstAttribute="width" constant="600" id="di2-6t-K34"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="gu1-Gn-w52"/>
                                     <constraint firstAttribute="bottom" secondItem="koW-Aw-HHH" secondAttribute="bottom" constant="5" id="rXD-TJ-WBW"/>
